--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,11 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+
+	compileOnly 'org.projectlombok:lombok:1.18.22'
+    annotationProcessor 'org.projectlombok:lombok:1.18.22'
+	implementation 'org.slf4j:slf4j-simple:1.7.30'
+	
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
